# claude-presentation-toolkit

./: .gitignore  README.md  pyproject.toml
examples/: sample_brand_config.yaml
src/presentation_toolkit/: __init__.py  analyze.py  cli.py  extract.py  migrate.py  pptx_utils.py
src/presentation_toolkit/config/: __init__.py  loader.py  schema.py
tests/: __init__.py  test_config.py
